// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AreaDataDialogComponent when the vm is correct without areaData should render the content if the correct vm is provided 1`] = `
<div
  id="root2"
  ng-version="20.1.7"
>
  <!--container-->
  <!--container-->
</div>
`;

exports[`AreaDataDialogComponent when the vm is not correct should not render the content 1`] = `
<div
  id="root0"
  ng-version="20.1.7"
>
  <!--container-->
</div>
`;
